--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 	color: #EDF2F4;
 	width: 800px;
 	height: 360px;
-	margin: 10px auto;
+	margin: auto auto;
 	padding: 10px;
 	border-radius: 20px;
 	display: flex;
